docs and minor changes
