# handlers/ops_func.go
@@ -7,13 +7,13 @@ import (
 // InitMissingFungibleVaultsFunc starts job to init missing fungible token vaults.
 func (s *Ops) InitMissingFungibleVaultsFunc(rw http.ResponseWriter, r *http.Request) {
 
-	started, err := s.service.InitMissingFungibleTokenVaults()
+	result, err := s.service.InitMissingFungibleTokenVaults()
 	if err != nil {
 		handleError(rw, r, err)
 		return
 	}
 
-	handleJsonResponse(rw, http.StatusOK, started)
+	handleJsonResponse(rw, http.StatusOK, result)
 }
 
 // GetMissingFungibleVaultsFunc returns number of accounts with missing fungible token vaults.
