# ops/fungible_vaults.go
@@ -2,6 +2,7 @@ package ops
 
 import (
 	"context"
+	"fmt"
 	"sync"
 	"time"
 
@@ -10,6 +11,11 @@ import (
 	"github.com/flow-hydraulics/flow-wallet-api/transactions"
 	log "github.com/sirupsen/logrus"
 )
+
+type TokenCount struct {
+	TokenName string `json:"token"`
+	Count     uint   `json:"count"`
+}
 
 func (s *ServiceImpl) GetMissingFungibleTokenVaults() ([]TokenCount, error) {
 
@@ -35,22 +41,23 @@ func (s *ServiceImpl) GetMissingFungibleTokenVaults() ([]TokenCount, error) {
 	return result, nil
 }
 
-func (s *ServiceImpl) InitMissingFungibleTokenVaults() (bool, error) {
+func (s *ServiceImpl) InitMissingFungibleTokenVaults() (string, error) {
 	if s.initFungibleJobRunning {
-		log.Debug("Fungible token vault init job is already running")
-		return true, nil
+		return "Job is already running", nil
 	}
 
 	s.initFungibleJobRunning = true
 
-	log.Debug("Starting new fungible token vault init job")
+	log.Info("Starting new fungible token vault init job")
 
 	tokens, err := s.temps.ListTokensFull(templates.FT)
 	if err != nil {
-		return false, err
+		return "", err
 	}
 
+	// mapping of user account address to list of fungible tokens that needs to be initialized
 	accountsMap := make(map[string][]string)
+	// token name -> FungibleTokenInfo for templating
 	tokenInfoMap := make(map[string]template_strings.FungibleTokenInfo)
 	for _, t := range tokens {
 		if t.Name != "FlowToken" {
@@ -64,7 +71,7 @@ func (s *ServiceImpl) InitMissingFungibleTokenVaults() (bool, error) {
 
 			accounts, err := s.store.ListAccountsWithMissingVault(t.Name)
 			if err != nil {
-				return false, err
+				return "", err
 			}
 			for _, a := range *accounts {
 				accountsMap[a.Address] = append(accountsMap[a.Address], t.Name)
@@ -80,6 +87,7 @@ func (s *ServiceImpl) InitMissingFungibleTokenVaults() (bool, error) {
 
 		txWg.Add(1)
 
+		// create a new job for each account to init token vaults
 		s.wp.AddFungibleInitJob(
 			OpsInitFungibleVaultsJob{
 				Address:   address,
@@ -98,6 +106,7 @@ func (s *ServiceImpl) InitMissingFungibleTokenVaults() (bool, error) {
 						return err
 					}
 
+					// blocks until transaction is sealed
 					_, tx, err := s.txs.Create(context.Background(), true, address, txScript, nil, transactions.FtSetup)
 					if err != nil {
 						return err
@@ -106,11 +115,11 @@ func (s *ServiceImpl) InitMissingFungibleTokenVaults() (bool, error) {
 					for _, t := range tokenList {
 						err := s.tokens.AddAccountToken(t, address)
 						if err != nil {
-							log.Debugf("Error adding AccountToken to store: %s", err)
+							log.Errorf("Error adding AccountToken to store: %s", err)
 						}
 					}
 
-					log.Debugf("ops transaction sent: %s", tx.TransactionId)
+					log.Debugf("InitMissingFungibleTokenVaults transaction sent: %s", tx.TransactionId)
 
 					return nil
 				},
@@ -120,11 +129,12 @@ func (s *ServiceImpl) InitMissingFungibleTokenVaults() (bool, error) {
 		time.Sleep(s.cfg.OpsBurstInterval)
 	}
 
+	// unlock after all transactions are sealed
 	go func() {
 		txWg.Wait()
 		s.initFungibleJobRunning = false
-		log.Debug("Fungible token vault init job finished")
+		log.Info("Fungible token vault init job finished")
 	}()
 
-	return false, nil
+	return fmt.Sprintf("Job started! Accounts: %d, Workers: %d", len(accountsMap), s.wp.NumWorkers()), nil
 }
